# market-pulse

./: .env.example  .gitignore  01-market-pulse.md  README.md  mypy.ini  pyproject.toml  ruff.toml
src/market_pulse/: config.py
src/market_pulse/ai/: analyst.py  prompts.py  scanner.py  summarizer.py
src/market_pulse/alerts/: conditions.py  engine.py
src/market_pulse/alerts/notifiers/: email.py  slack.py  terminal.py
src/market_pulse/analysis/: anomaly.py  comparison.py  fundamental.py  sentiment.py  technical.py
src/market_pulse/cli/: alert.py  app.py  compare.py  report.py  scan.py  watch.py
src/market_pulse/data/: aggregator.py  normalizer.py
src/market_pulse/data/sources/: alphaV.py  newsapi.py  reddit.py  sec.py  yahoo.py
src/market_pulse/export/: json.py  markdown.py  pdf.py
src/market_pulse/models/: market.py
src/market_pulse/storage/: cache.py  db.py
src/market_pulse/storage/migrations/: 001_initial.sql
tests/: conftest.py
tests/analysis/: test_anomaly.py  test_technical.py
tests/data/: test_aggregator.py
tests/data/fixtures/: aapl_price.json  newsapi_response.json
